# pumpr

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
apps/web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  railway.toml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/how-it-works/: page.tsx
apps/web/src/app/launch/: page.tsx
apps/web/src/app/pulse/: page.tsx
apps/web/src/app/token/[mint]/: page.tsx
apps/web/src/components/: FeaturedCarousel.tsx  LiveStats.tsx  Nav.tsx  PriceChart.tsx  StakeBar.tsx  StakePanel.tsx  StakersList.tsx  StatsTicker.tsx  TokenTable.tsx  TrendingCards.tsx  WalletContextProvider.tsx
apps/web/src/lib/: anchorClient.ts  config.ts
programs/pumprr-staking/: Cargo.toml
programs/pumprr-staking/src/: lib.rs
services/crank/: .env.example  package.json
services/crank/src/: index.ts
services/launcher/: .env.example  Dockerfile  package.json  railway.toml  tsconfig.json
services/launcher/scripts/: claim.ts  refund.ts
services/launcher/src/: db.ts  depositIndexer.ts  distributionWorker.ts  escrows.ts  grindPool.ts  holdersWorker.ts  index.ts  indexer.ts  keyVault.ts  launcher.ts  pumpfunOnchain.ts  pumpportal.ts  pumpportalWs.ts  streamflowIndexer.ts  sweepFees.ts  tokenProgram.ts  unlockWorker.ts  vanity.ts  watcher.ts
tests/: staking.spec.ts
