[package]
name = "pumprr-staking"
version = "0.1.0"
description = "pumprr Proof-of-Belief staking: per-token fee-share escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pumprr_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
